# cluster_hat

./: README.md
doc/: CPUSPEC.md  HPC.md  OPENCV.md  README.md  ROS.md  USEFULL_COMMANDS.MD
doc/man/: cluster_hat_notes.txt
results/image_proc_results/: process.txt
results/image_proc_results/results/: carlmacbook_results.txt
results/ros_image_proc_results/: process.txt
results/ros_image_proc_results/results/16NodesMacbook/: all_results.txt  run1.txt  run10.txt  run2.txt  run3.txt  run4.txt  run5.txt  run6.txt  run7.txt  run8.txt  run9.txt
results/ros_image_proc_results/results/4NodesMacbook copy/: all_results.txt  run1.txt  run10.txt  run2.txt  run3.txt  run4.txt  run5.txt  run7.txt  run8.txt  run9.txt
results/speed_test/: 16results.txt  1results.txt  4results.txt  process.txt
src/: README.md
src/image_processing/: README.md  main  main.cpp  makefile
src/image_processing_ros/: CMakeLists.txt  README.md  controller.launch  package.xml  test.launch
src/image_processing_ros/include/: controller.h  processor.h
src/image_processing_ros/msg/: comm.msg  control.msg  return_img.msg
src/image_processing_ros/src/: controller.cpp  processor.cpp
src/speed_test/: CMakeLists.txt  README.md  package.xml  test.launch
src/speed_test/include/: calculation.h  controller.h
src/speed_test/src/: calculation.cpp  controller.cpp
