<?xml version="1.0"?>
<package format="1">
<name>image_processing_ros</name>
<version>0.0.0</version>
<description>This package is used to test the Raspberry Pi ability to split an image onto multiple nodes</description>

<maintainer email="hildebrandt.carl@outlook.com">Carl Hildebrandt</maintainer>

<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>message_generation</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
