<?xml version="1.0"?>
<package format="1">
<name>speed_test</name>
<version>0.0.0</version>
<description>This package is used to test the Raspberry Pi Speedup</description>

<maintainer email="hildebrandt.carl@outlook.com">Carl Hildebrandt</maintainer>

<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>message_generation</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
</package>
